Fixed try list alignment

--- a/level5-A/lesson-18/main.scss
+++ b/level5-A/lesson-18/main.scss
@@ -314,7 +314,7 @@ body {
     .try-content{
       padding-left: 2.7em;
       ul{
-        margin-left: 1.1em;
+        margin-left: 1em;
         padding: 0;
         line-height: clamp(12px, 3vw, 26px);
       }
